samples/_failures_safe/1761155741_21aeb9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5a80fdbc.c: In function ‘matrix_print’:
./samples/SAFE/__tmp_5a80fdbc.c:136:23: error: expected ‘;’ at end of input
  136 |             matrix_get
      |                       ^
      |                       ;
./samples/SAFE/__tmp_5a80fdbc.c:136:13: error: expected declaration or statement at end of input
  136 |             matrix_get
      |             ^~~~~~~~~~
./samples/SAFE/__tmp_5a80fdbc.c:136:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5a80fdbc.c:136:13: error: expected declaration or statement at end of input
